--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@starknet-react/chains": "^4.0.3",
+    "@starknet-react/core": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "starknet": "^7.6.4",
+    "starknetkit": "^3.0.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
